syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "proto/reviews";

service ReviewsService {
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Review {
  int64 ID = 1;
  int32 Rating = 2;
  string Comment = 3;
  int32 TouristId = 4;
  int64 TourId = 5;
  google.protobuf.Timestamp TourVisitDate = 6;
  google.protobuf.Timestamp CommentDate = 7;
  repeated string Images = 8;
}

message GetByIdRequest {
  string ID = 1;
}

message GetByIdResponse {
  Review review = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated Review reviews = 1;
}

message CreateRequest {
  Review review = 1;
}

message CreateResponse {
}

message UpdateRequest {
  Review review = 1;
}

message UpdateResponse {
}

message DeleteRequest {
  string ID = 1;
}

message DeleteResponse {
}
